jni_generator: handle inner class natives properly.

Inner classes with native methods but no @CalledByNative methods were
generating incorrect code that doesn't compile, but there was no example
of this in the sample class and so it wasn't noticed. Several of the
non-compiled test headers were doing this and the header was just
un-compilable as a result.

Fix this by including the class global's declaration and initialisation
in all the appropriate cases, and adding an example to the sample.

BUG=629103
R=rmcilroy@chromium.org

Review URL: https://codereview.chromium.org/2154293002 .

Cr-Commit-Position: refs/heads/master@{#406249}

Former-commit-id: 2eb44e80e1216124ced411b369a254d103d00cc3