base/android/jni_generator/java/src/org/chromium/example/jni_generator/SampleForTests.java
@@ -10,6 +10,7 @@ import org.chromium.base.annotations.AccessedByNative;
 import org.chromium.base.annotations.CalledByNative;
 import org.chromium.base.annotations.CalledByNativeUnchecked;
 import org.chromium.base.annotations.JNINamespace;
+import org.chromium.base.annotations.NativeCall;
 import org.chromium.base.annotations.NativeClassQualifiedName;
 
 import java.util.ArrayList;
@@ -301,4 +302,10 @@ class SampleForTests {
     native void nativeAddStructB(long nativeCPPClass, InnerStructB b);
     native void nativeIterateAndDoSomethingWithStructB(long nativeCPPClass);
     native String nativeReturnAString(long nativeCPPClass);
+
+    // This inner class shows how to annotate native methods on inner classes.
+    static class InnerClass {
+        @NativeCall("InnerClass")
+        private static native int nativeGetInnerIntFunction();
+    }
 }
